Some more refactoring, and fixing the vertical alignment of lyrics panel

--- a/webroot/css/printable.css
+++ b/webroot/css/printable.css
@@ -22,6 +22,10 @@ table.page.printable  {
      /*border: 1px solid gray;*/
      table-layout:fixed;
  }
+.printable table.page td,
+table.page.printable td {
+     vertical-align: text-top;
+ }
 .printable table.page.single-song,
 table.page.printable.single-song  {
      page-break-before: never;
